# Multi-Agentic-Campaign-Planner

./: .deploy-to-dev.yaml.swp  .env.example  .gitignore  AI Agent for Performance Marketing.xlsx  README.md  categories.json  config.yaml  descriptions.txt  main.py  populate_db.py  pyproject.toml  requirements.txt
campaign-planner/: app.py  config.yaml  graph.py  main.py  pyproject.toml  requirements.txt  state.py
campaign-planner/agents/ad_channel_recommender/: graph.py  input.py  output.py  prompt.yaml  router.py
campaign-planner/agents/audience_segment_analyzer/: graph.py  input.py  output.py  process.py  prompt.yaml  state.py
campaign-planner/agents/base/: __init__.py  graph.py  human.py  input.py  node.py  output.py  process.py  router.py
campaign-planner/agents/brand_industry_classifier/: graph.py  input.py  output.py  process.py  router.py  state.py
campaign-planner/agents/brand_mapping/: __init__.py  graph.py  node.py  output.py  process.py  prompt.yaml  router.py  schema.py  state.py
campaign-planner/agents/campaign_name_generator/: graph.py  input.py  output.py  process.py
campaign-planner/agents/campaign_schedule_recommender/: graph.py  human.py  input.py  output.py  process.py
campaign-planner/datastore/: chroma.sqlite3
campaign-planner/nodes/: base_node.py
campaign-planner/utils/: __init__.py  draw_graph.py  generator.py  logger.py  retriever.py
campaign_objective_planner/: graph.py  (+1 more)
crewagent-campaignplanner/: .env_template  README.md  pyproject.toml  requirements.txt
crewagent-campaignplanner/output/: campaign_setup.json  input.json
(+125 files in other folders)
