[project]
name = "campaign-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.10",
    "gradio>=5.20.0",
    "langchain>=0.3.19",
    "langchain-chroma>=0.2.2",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.15",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]>=3.2.5",
    "pyyaml>=6.0.2",
    "ruff>=0.9.7",
]
